--- a/logo/css/logo.css
+++ b/logo/css/logo.css
@@ -1,23 +1,22 @@
 body {
 	margin: 0px;
-	padding: 20px;
+	padding: 2rem;
+}
+
+.canvas-area {
+	width: 100%;
+	border-radius: 7px;
+	border: 1px solid #000;
 }
 
 #canvaLogo {
 	width: 100%;
 	height: 100%;
+	min-height: 320px;
+	max-height: 480px;
 }
 
 .draw-panel {
-}
-
-.canvas-area {
-	width: 100%;
-	height: 100%;
-	min-width: 200px;
-	min-height: 300px;
-	border-radius: 7px;
-	border: 1px solid #000;
 }
 
 .control-panel {
